# ftpd

./: .gitignore  CMakeLists.txt  Makefile  README.md  lo  mftp  mftp.c  mftp.h  mftp_client  mftp_client.c
ftpClient/: ftpClient.cbp  ftpClient.depend  ftpClient.layout  main.cpp
ftpClient/include/: FtpClient.h
ftpClient/src/: FtpClient.cpp
include/: mlanguage.h  print_util.h
src/client/: mftp_client.c
src/server/: mftp.c
